--- a/esd-project-file.rmd
+++ b/esd-project-file.rmd
@@ -2,7 +2,7 @@
 title: Exploratory Data Analysis Project
 author: Larry Henry Jr.
 date: June 8, 2021
-output: 
+output:
   html_document:
     theme: darkly
     highlight: textmate
@@ -15,11 +15,11 @@ output:
 
 # Introduction
 
-This project is part of the Udacity's Data Analyst Nanodegree Program. I conducted an Exploratory Data Analysis (EDA) on one of the curated data sets, provided by Udacity, from [Prosper](https://www.prosper.com/plp/about/), which is America’s first [marketplace lending platform](https://www.prosper.com/personal-loans), with over $12 billion in funded loans as of June 2021.
+The scope of this project was to create a standalone R program that would examine input data from an online peer-to-peer marketplace by selecting influential factors for analyzing and applying descriptive statistical methods. The dataset would contain transaction level information related to loan and borrower data, interest rates, and borrower demographics. Then, the program would output the results from the data analysis in a report, in which identifies loan performance and potential risk factors in the data. I conducted an Exploratory Data Analysis (EDA) on one of the curated data sets, provided by Udacity, from [Prosper](https://www.prosper.com/plp/about/), which is America’s first [marketplace lending platform](https://www.prosper.com/personal-loans), with over $12 billion in funded loans as of June 2021.
 
 This data set contains 113,937 loans with 81 variables on each loan, including loan amount, borrower rate (or interest rate), current loan status, borrower income, borrower employment status, borrower credit history, and the latest payment information. The dataset contains loans created between 2005-Q4 and 2014-Q1 with a last updated date of 03/11/2014. Here's a link to the [variable definitions](https://docs.google.com/spreadsheets/d/1gDyi_L4UvIrLTEC6Wri5nbaMmkGmLQBk-Yx3z0XDEtI/edit#gid=0) for this dataset.
 
-The main purpose of this project is to summarize the characteristics of variables that can affect the loan status and to get some ideas about the relationships among multiple variables using summary statistics and data visualizations.
+The goal of this project is to create a program that would use descriptive analysis to evaluate peer-to-peer lending data. The program would return aggregations and derived values of key attributes using descriptive statistical methods and visualizations. The program will return any conclusions drawn or results of key indicators or factors that may have implications on key business decisions.
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, packages}
 # Load all of the packages that you end up using in your analysis in this code
@@ -57,7 +57,10 @@ library(reshape2)
 ```
 
 ```{r  echo=FALSE, message=FALSE, warning=FALSE, Global_seetings}
-# To set global options that apply to every chunk in your file, call knitr::opts_chunk$set in a code chunk. Knitr will treat each option that you pass to knitr::opts_chunk$set as a global default that can be overwritten in individual chunk headers.
+# To set global options that apply to every chunk in your file, call 
+# knitr::opts_chunk$set in a code chunk. Knitr will treat each option that you 
+# pass to knitr::opts_chunk$set as a global default that can be overwritten in 
+# individual chunk headers.
 knitr::opts_chunk$set(echo = FALSE,
                       warning = FALSE,
                       message = FALSE)
@@ -87,11 +90,11 @@ First, the following are the object names of the dataset.
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Load_the_Data_Display_headers}
 
-# Load the Data
 loandata <-
-  read.csv(
-    '~/My Projects/Udacity/udacity-projects/Project Explore and Summarize Data/csv/prosperLoanData.csv'
+  read.csv("https://s3.amazonaws.com/udacity-hosted-downloads/ud651/prosperLoanData.csv"
   )
+# '~/My Projects/Udacity/udacity-projects/Project Explore and Summarize Data/csv
+#   /prosperLoanData.csv')
 
 loandata %>%
   names()
@@ -102,19 +105,30 @@ loandata %>%
 
 Next, the following is the initial dataframe's structure.
 
-```{r echo=FALSE, message=FALSE, warning=FALSE, out.width=20, data_frame_structure}
+```{r echo=FALSE, message=FALSE, warning=FALSE, out.width=20, df_structure}
 str(loandata)
+```
+
+Then, I converted the credit scores' lower and upper ranges into a single credit score by taking the average of the two values. 
+
+```{r, echo = TRUE, message=FALSE, warning=FALSE, credit_score_conversion}
+# Created new variable by converting CreditScoreRangeLower and 
+# CreditScoreRangeUpper into a single value (the average of the two)
+loandata <- loandata %>% 
+  mutate(CreditScore = CreditScoreRangeLower / 2 + CreditScoreRangeUpper / 2)
+
+names(loandata)
 ```
 
 Next, I will use a subset of this dataset for performing an analysis. The main purpose of this analysis is to explore the various factors that affect borrowers' rates. The following are the variables I would like to use.
 
-```{r echo=FALSE, message=FALSE, warning=FALSE, Subseting}
+```{r echo=FALSE, message=FALSE, warning=FALSE, Subsetting}
 # Subset the dataframe
 loandata <- subset(loandata,
                    select = c(LoanNumber, LoanOriginalAmount, LoanOriginationDate, LoanOriginationQuarter,
-                              Term, LoanStatus, BorrowerRate, LenderYield, ProsperRating..Alpha., 
+                              Term, LoanStatus, BorrowerRate, LenderYield, ProsperRating..Alpha.,
                               ProsperScore, ListingCategory..numeric., EmploymentStatus, IsBorrowerHomeowner,
-                              CreditScoreRangeLower, CreditScoreRangeUpper, InquiriesLast6Months,
+                              CreditScore, CreditScoreRangeLower, CreditScoreRangeUpper, InquiriesLast6Months,
                               PublicRecordsLast10Years, IncomeRange, IncomeVerifiable))
 
 # Listing the column names for the subset data
@@ -131,7 +145,7 @@ loandata$Term <- factor(loandata$Term)
 levels(loandata$Term) <- c("1 year", "3 years", "5 years")
 
 # ListingCategory: numeric to factors
-names(loandata)[names(loandata) == 'ListingCategory..numeric.'] <- 'ListingCategory' 
+names(loandata)[names(loandata) == 'ListingCategory..numeric.'] <- 'ListingCategory'
 
 loandata$ListingCategory <- factor(loandata$ListingCategory)
 
@@ -194,7 +208,7 @@ loandata$Term %>%
   table() %>%
   prop.table()
 ```
-> Above 90% of the loans in this dataset are with term more than 1 year. Most of them is of 3 years.    
+> Above 90% of the loans in this dataset are with term more than 1 year. Most of them is of 3 years.
 
 ```{r echo=FALSE, message=FALSE, fig.height=8, warning=FALSE, Loan_by_Year}
 # set Loan Orignal Date in Year-Month-Date format
@@ -217,7 +231,7 @@ ggplot(loandata, aes(as.factor(LoanOriginationDate.year))) +
     colour = "black",
     size = 3.5) +
   theme_pubr() +
-  theme(plot.title = element_text(hjust = 0.5)) 
+  theme(plot.title = element_text(hjust = 0.5))
 
 summary(loandata$LoanOriginationDate.year)
 ```
@@ -246,7 +260,7 @@ loandata$LoanStatus %>%
   table() %>%
   prop.table()
 ```
-> There are four major loan status: "Defaulted", "Current", "Completed", and "Chargedoff."    
+> There are four major loan status: "Defaulted", "Current", "Completed", and "Chargedoff."
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Prosper_Rating}
 # Bar chart: ProsperRating
@@ -259,7 +273,7 @@ ggplot(data = subset(loandata, ProsperRating != ""), aes(x = ProsperRating)) +
     colour = "black",
     size = 3.5) +
   ggtitle('Number of Loans by Prosper Rating') +
-  labs(caption = "*NA excluded") +  
+  labs(caption = "*NA excluded") +
   scale_y_continuous(name = 'Loan Count',
                      limits = c(0, 20000),
                      breaks = breaks_width(5000)) +
@@ -271,7 +285,7 @@ loandata$ProsperRating %>%
   table() %>%
   prop.table()
 ```
-> The above bar chart shows Prosper's rating distribution. The unrated loans are removed in this plot.  
+> The above bar chart shows Prosper's rating distribution. The unrated loans are removed in this plot.
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Employment_Status}
 # Horizontal bar chart: Employment_Status
@@ -296,7 +310,7 @@ loandata$EmploymentStatus %>%
   table() %>%
   prop.table()
 ```
-> The majority of Prosper users are either employed or have a full-time job.    
+> The majority of Prosper users are either employed or have a full-time job.
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Homeowner}
 # Pie chart: IsBorrowerHomeowner
@@ -311,12 +325,12 @@ ggplot(
   theme(plot.title = element_text(hjust = 0.5))
 ```
 
-> About half of the users are homeowners.    
+> About half of the users are homeowners.
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, IncomeRange}
 # Horizontal bar chart: IncomeRange
 ggplot(
-  data = loandata, aes(x = IncomeRange)) + 
+  data = loandata, aes(x = IncomeRange)) +
   geom_bar(color = 'black', fill = '#96ADBD') +
   coord_flip() +
   labs(x = ' ', y = 'Loan Count') +
@@ -336,13 +350,13 @@ loandata$IncomeRange %>%
   table() %>%
   prop.table()
 ```
-> About 70% of borrowers' income are in the range of $25,000 - $100,000    
+> About 70% of borrowers' income are in the range of $25,000 - $100,000
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, IncomeVerifiable}
 # Pie chart: IncomeVerifiable
 ggplot(
   data = loandata, aes(x = '', fill = IncomeVerifiable)) +
-  geom_bar() + 
+  geom_bar() +
   coord_polar(theta = 'y') +
   scale_fill_manual(values=c('#96ADBD', '#425E72')) +
   labs(x = NULL, y = NULL) +
@@ -351,7 +365,7 @@ ggplot(
   theme(plot.title = element_text(hjust = 0.5))
 ```
 
-> Most of borrowers have their income verified.    
+> Most of borrowers have their income verified.
 
 ### Numerical Variables
 
@@ -372,9 +386,9 @@ summary(loandata$BorrowerRate)
 
 # Histogram: LenderYield
 ggplot(
-  data = loandata, aes(x=LenderYield)) + 
+  data = loandata, aes(x=LenderYield)) +
   geom_histogram(color = 'black', fill = '#96ADBD') +
-  ggtitle('Number of Loans by Lender Yield') +  
+  ggtitle('Number of Loans by Lender Yield') +
   ylab('Loan Count') +
   theme_pubr() +
   theme(plot.title = element_text(hjust = 0.5))
@@ -399,7 +413,7 @@ p2 <- ggplot(data = loandata, aes(x=CreditScoreRangeUpper)) +
   scale_x_continuous(limits = c(400,900)) +
   ylab('Loan Count')+
   theme_pubr() +
-  theme(plot.title = element_text(hjust = 0.5))  
+  theme(plot.title = element_text(hjust = 0.5))
 
 # Plot p1 and p2 in the same column
 grid.arrange(
@@ -410,49 +424,56 @@ grid.arrange(
                   just = 'right'))
 ```
 
-> The ranges of credit scores are small compared to the distributions. I will use lower credit score for further analyses. 
+> The ranges of credit scores are small compared to the distributions. I will use the created credit score variable that takes the averages of the two ranges for further analyses.
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, InquiriesLast6Months}
 # Histogram: InquiriesLast6Months
+breaks=c(0,1,2,3,4,5,10,15,25)
 ggplot(data = subset(loandata, is.na(loandata$InquiriesLast6Months)!=TRUE),
        aes(x=InquiriesLast6Months)) +
-  geom_histogram(binwidth = 1, color = 'black', fill = '#96ADBD') +
-  ggtitle('Number of Loans by Inquiries Last 6 Months') +  
+  # stat_density(aes(y=..count..), color = 'black', fill = '#96ADBD', alpha=.8) +
+  geom_histogram(bins = 25, binwidth = 0.1, color = 'black', fill = '#96ADBD') +
+  scale_x_log10(breaks = breaks) +
+  # scale_y_continuous(expand = c(0,0)) +
+  ggtitle('Number of Loans by Inquiries Last 6 Months') +
   ylab('Loan Count') +
   theme_pubr() +
-  theme(plot.title = element_text(hjust = 0.5))  
+  theme(plot.title = element_text(hjust = 0.5))
 
 # Check unique values
 unique(loandata$InquiriesLast6Months)
 ```
 
-> The distribution of InquiriesLast6Months is right-skewed and long-tailed. Outliers like 105 and 53 exist.
+> The distribution after adding a scale_x_log10() layer of InquiriesLast6Months is right-skewed and long-tailed. Outliers like 105 and 53 exist.
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, PublicRecordsLast10Years}
 # Histogram: PublicRecordsLast10Years
+breaks=c(0,1,2,3,4,5,10)
 ggplot(data = subset(loandata, is.na(loandata$PublicRecordsLast10Years) != TRUE),
        aes(x = PublicRecordsLast10Years)) +
-  geom_histogram(binwidth = 1,
+  geom_histogram(bins = 25,
+                 binwidth = 0.1,
                  color = 'black',
                  fill = '#96ADBD') +
-  ggtitle('Number of Loans by Public Records Last 10 Years') +  
+  scale_x_log10(breaks = breaks) +  
+  ggtitle('Number of Loans by Public Records Last 10 Years') +
   ylab('Loan Count') +
   theme_pubr() +
-  theme(plot.title = element_text(hjust = 0.5))   
+  theme(plot.title = element_text(hjust = 0.5))
 
 # Check unique values
 unique(loandata$PublicRecordsLast10Years)
 ```
-> The distribution of PublicRecordsLast10Years is right-skewed and has some outliers.
+> The distribution after adding a scale_x_log10() layer of PublicRecordsLast10Years is right-skewed and has some outliers.
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, LoanOriginalAmount }
 # Histogram: LoanOriginalAmount
 ggplot(data = loandata, aes(x = LoanOriginalAmount)) +
   geom_histogram(color = 'black', fill = '#96ADBD') +
-  ggtitle('Number of Loans by Loan Original Amount') +  
+  ggtitle('Number of Loans by Loan Original Amount') +
   ylab('Loan Count') +
   theme_pubr() +
-  theme(plot.title = element_text(hjust = 0.5))    
+  theme(plot.title = element_text(hjust = 0.5))
 
 ggplot(data = loandata, aes(x = LoanOriginalAmount)) +
   geom_histogram(binwidth = 2000,
@@ -478,8 +499,8 @@ summary(loandata$LoanOriginalAmount)
 
 This is a very large dataset with 113937 records and 81 variables on each loan and covers the period from 2005 through 2014. For simplicity with the analysis, I use a subset of the original dataset containing the same number of records, but only with 15 variables that I want to explore. The 15 variables are as follows:
 
-**Categorical:** 
-    
+**Categorical:**
+
     * Term
     * LoanStatus
     * ProsperRating
@@ -489,12 +510,13 @@ This is a very large dataset with 113937 records and 81 variables on each loan a
     * IncomeRange
     * IncomeVerifiable
 
-**Numerical:** 
+**Numerical:**
 
     * BorrowerRate
     * LenderYield
     * CreditScoreRangeLower
     * CreditScoreRangeUpper
+    * CreditScore
     * InquiriesLast6Months
     * PublicRecordsLast10Years
     * LoanOriginalAmount
@@ -511,7 +533,7 @@ Features om the dataset that I think will help support my investigation into fea
 
 I factorized a few variables because those variables are either intrinsically categorical or they only have several possible values.
 
-#### Of the features you investigated, were there any unusual distributions? 
+#### Of the features you investigated, were there any unusual distributions?
 #### Did you perform any operations on the data to tidy, adjust, or change the form of the data? If so, why did you do this?
 
 Of the features you investigated, I observed some unusual distributions in the `LoanOriginalAmount` histogram. The frequencies are higher around `4,000`, `5,000`, `10,000`, `15,000` and so on. I believe these amounts are more common for most borrowers to choose from.
@@ -544,8 +566,8 @@ The trivial features are `CreditScoreRangeUpper` and `CreditScoreRangeLower`. Ne
 # Scatter plot: BorrowerRate and Lender Yield
 ggplot(data = loandata, aes(x = BorrowerRate, y = LenderYield)) +
   geom_point(fill = I('#96ADBD'), color = I('black'), shape = 21) +
-  geom_smooth(method = "lm", color = I('red'))  + # Add regression line 
-  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +  
+  geom_smooth(method = "lm", color = I('red'))  + # Add regression line
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
   theme_pubr()
 
 # Calcuate the correlation coefficient
@@ -561,7 +583,7 @@ ggplot(data = subset(loandata, ProsperRating != ""),
   labs(caption = "*NA excluded") +
   ggtitle("Borrower Rate by Prosper Rating") +
   theme_pubr() +
-  theme(plot.title = element_text(hjust = 0.5)) 
+  theme(plot.title = element_text(hjust = 0.5))
 ```
 
 > This boxplot shows that `ProsperRating` does affect the `BorrowerRate` and its relationship.
@@ -574,7 +596,7 @@ ggplot(data = loandata, aes(x = Term, y = BorrowerRate)) +
   geom_boxplot(color = I('#425E72')) +
   ggtitle("Borrower Rate by Term") +
   theme_pubr() +
-  theme(plot.title = element_text(hjust = 0.5)) 
+  theme(plot.title = element_text(hjust = 0.5))
 
 # Summaries of BorrowerRate by Term
 tapply(loandata$BorrowerRate, loandata$Term, summary)
@@ -585,10 +607,10 @@ tapply(loandata$BorrowerRate, loandata$Term, summary)
 # Scatter plot: LoanOriginalAmount and BorrowerRate
 ggplot(data = loandata, aes(x = LoanOriginalAmount, y = BorrowerRate)) +
   geom_point(alpha = 0.2, color = '#425E72') +
-  # geom_point(alpha = 0.2, fill = '#96ADBD', color = 'black', shape = 21) +  
+  # geom_point(alpha = 0.2, fill = '#96ADBD', color = 'black', shape = 21) +
   ggtitle("Borrower Rate by LoanOriginalAmount") +
   theme_pubr() +
-  theme(plot.title = element_text(hjust = 0.5)) 
+  theme(plot.title = element_text(hjust = 0.5))
 
 # Calcuate the correlation coefficient
 cor(loandata$LoanOriginalAmount, loandata$BorrowerRate)
@@ -628,7 +650,7 @@ ggplot(aes(ProsperRating), data = loandata) +
   ggtitle('Number of Loans by Prosper Rating') +
   labs(x = 'Rating', y = 'Loan Count') +
   theme_pubr(legend = 'right') +
-  theme(plot.title = element_text(hjust = 0.5))  
+  theme(plot.title = element_text(hjust = 0.5))
 
 summary(loandata$ProsperRating)
 ```
@@ -637,11 +659,11 @@ summary(loandata$ProsperRating)
 ```{r echo=FALSE, fig.height=7, message=FALSE, warning=FALSE, ProsperRating_vs_CreditScore}
 # Boxplot: ProsperRating and CreditScoreRangeUpper
 ggplot(data = subset(loandata, ProsperRating != ""),
-       aes(x = ProsperRating, y = CreditScoreRangeUpper)) +
+       aes(x = ProsperRating, y = CreditScore)) +
   geom_boxplot(color = '#425E72') +
   labs(caption = "*NA excluded") +
-  theme_pubr() +  
-  theme(axis.text.x = element_text(angle = 45, hjust = 1)) 
+  theme_pubr() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
 
 > A higher credit score by the consumer rating agency also tends to have a higher `ProsperRating`.
@@ -654,7 +676,7 @@ ggplot(data = subset(loandata, loandata$ProsperRating != ""),
   scale_fill_discrete() +
   scale_fill_manual(values = c("#96ADBD", "#425E72")) +
   labs(x = 'Rating', y = 'Loan Count', caption = "*NA excluded") +
-  theme_pubr(legend = 'right') +  
+  theme_pubr(legend = 'right') +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
 
@@ -668,7 +690,7 @@ ggplot(data = subset(loandata, loandata$ProsperRating != ""),
   scale_fill_discrete() +
   scale_fill_manual(values = c('#96ADBD', '#425E72')) +
   labs(x = 'Rating', y = 'Loan Count', caption = "*NA excluded") +
-  theme_pubr(legend = 'right') +  
+  theme_pubr(legend = 'right') +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
 
@@ -680,7 +702,7 @@ ggplot(data = subset(loandata, loandata$ProsperRating != ""),
 First, the `LenderYield` and `BorrowerRate` are strongly related because the fixed rate charged by Prosper. Second, the `BorrowerRate` and `ProsperRating` do vary with borrower status. In addition, a good relationships I found was through the proprietary Prosper Rating system.
 
 #### Did you observe any interesting relationships between the other features (not the main feature(s) of interest)?
-The relationship between `ListCategory` and `BorrowerRate` is interesting. In average, for this relationship, cosmetic procedure's rates are relatively higher, whereas boat rates are lower. 
+The relationship between `ListCategory` and `BorrowerRate` is interesting. In average, for this relationship, cosmetic procedure's rates are relatively higher, whereas boat rates are lower.
 
 #### What was the strongest relationship you found?
 The strongest relationship I found is the one between the `LenderYield` and `BorrowerRate`, with a correlation coefficient very close to 1. In addition, the relationship between `ProsperRating` / `LenderYield` and `ProsperRating` / `BorrowerRate` have an inverse relationship. The higher the rating, the lower the `LenderYield` and `BorrowerRate`.
@@ -689,7 +711,7 @@ The strongest relationship I found is the one between the `LenderYield` and `Bor
 
 # Multivariate Plots Section
 
-Now let's put everything together based on what I found in the bivariate plots section by creating a few multivariate plots to investigate more complex interactions between variables. 
+Now let's put everything together based on what I found in the bivariate plots section by creating a few multivariate plots to investigate more complex interactions between variables.
 
 ```{r echo=FALSE, fig.height=7, message=FALSE, warning=FALSE, fig.height=7, Jitter_Plot_Homeowner }
 # Jitter plot: ProsperRating and BorrowerRate, colored by IsBorrowerHomeowner
@@ -711,7 +733,7 @@ ggplot(data = subset(loandata, loandata$ProsperRating != ""),
   geom_point(alpha = 0.5) +
   scale_color_brewer(type = "qual", palette = "Paired") +
   labs(caption = "*NA excluded") +
-  theme_pubr(legend = 'right')  
+  theme_pubr(legend = 'right')
 ```
 
 > In this plot, I found evidence that each rating has its own colored area that is easily recognized, which indicates that `ProsperRating` is a good predictor for the `BorrowerRate`. Also, highly rated loans (i.e. "AA", "A", and "B") can have loan original amount over $30,000. On the other hand, most lowly rated loans (i.e. "E" and "HR") are below $10,000.
@@ -727,17 +749,17 @@ head(subset_table)
 ```
 
 ```{r echo=FALSE, fig.height=7, message=FALSE, warning=FALSE, Heat_Map_ListCategory }
-# Heat map: BorrowerRate based on ProsperRating nad ListingCategory 
+# Heat map: BorrowerRate based on ProsperRating nad ListingCategory
 ggplot(aes(x = ProsperRating, y = ListingCategory
            , fill = BorrowerRate), data = subset_table) +
   geom_tile(stat = "identity") +
   scale_fill_gradientn(colours = colorRampPalette(c("lightblue", "navy"))(100)) +
   labs(caption = "*NA excluded") +
   theme_pubr(legend = 'right')+
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))  
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
 
-> This plot shows the relative value of the average `BorrowerRates` of different `ListCategory`. 
+> This plot shows the relative value of the average `BorrowerRates` of different `ListCategory`.
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=7, Facet_Boxplot_Category }
 # Faceted boxplot: ProsperRating and BorrowerRate by ListingCategory
@@ -758,7 +780,7 @@ ggplot(data = subset(loandata, loandata$ProsperRating != ""),
   geom_jitter(alpha = 0.2, color = '#425E72') +
   facet_wrap(~ ListingCategory) +
   theme_pubr() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))  
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
 
 > Based on this plot, 'Boat', 'Green loans', and 'RV' categories have less data points. As a result, these catefories have less outliers as seen in the previous plots.
@@ -786,7 +808,7 @@ ggplot(data = subset(loandata, loandata$ProsperRating != ""),
        aes(x = ProsperRating, y = BorrowerRate)) +
   geom_boxplot(color = '#425E72') +
   facet_wrap( ~ EmploymentStatus, nrow = 4) +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))  
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
 # Faceted jitter plots: ProsperRating and BorrowerRate by EmploymentStatus
 ggplot(data = subset(loandata, loandata$ProsperRating != ""),
@@ -870,7 +892,7 @@ grid.arrange(plot3, plot4, ncol=1, nrow =2)
 ## Multivariate Analysis
 
 #### Talk about some of the relationships you observed in this part of the investigation. Were there features that strengthened each other in terms of looking at your feature(s) of interest?
-A feature that strengthened each other in terms of looking at the features of interest is `Term`, as this is a good indicator whether we have a better `BorrowerRate` or not. In addition, we see how variables like `BorrowerRate` and `ProsperRating` come together and how it affect each other. 
+A feature that strengthened each other in terms of looking at the features of interest is `Term`, as this is a good indicator whether we have a better `BorrowerRate` or not. In addition, we see how variables like `BorrowerRate` and `ProsperRating` come together and how it affect each other.
 
 #### Were there any interesting or surprising interactions between features?
 The criteria for being an AA borrowers seems to be tighten year-over-year. Also, there seems to be a fixed borrower rate for both the HR and AA criteria.
@@ -897,7 +919,7 @@ p3 <- ggplot(data = subset(loandata, ProsperRating != ""),
     y = "Borrower Rate (%)") +
   theme_pubr() +
   theme(axis.text.x = element_text(angle = 45, hjust = 1)
-        , plot.subtitle = element_text(size = 10, color = "#425E72"))  
+        , plot.subtitle = element_text(size = 10, color = "#425E72"))
 
 # Subplot 2: Jitter plot
 p4 <- ggplot(data = subset(loandata, loandata$ProsperRating != ""),
@@ -909,7 +931,7 @@ p4 <- ggplot(data = subset(loandata, loandata$ProsperRating != ""),
   labs(caption = "*NA excluded") +
   theme(axis.text.x = element_text(angle = 45, hjust = 1)
         , plot.subtitle = element_text(size = 10, color = "#425E72"),
-        plot.caption = element_text(color = "#425E72", face = "italic"))  
+        plot.caption = element_text(color = "#425E72", face = "italic"))
 
 # Combine above two plots
 grid.arrange(p3, p4, ncol = 1)
@@ -929,10 +951,10 @@ ggplot(data = subset(loandata, loandata$ProsperRating != ""),
     title = "Borrower Rate by Prosper Rating and Loan Original Amount",
     x = "Loan Original Amount($)",
     y = "Borrower Rate (%)",
-    color = "Prosper Rating") + 
+    color = "Prosper Rating") +
   theme_pubr(legend = 'right') +
   theme(legend.background = element_rect(color = 'black'),
-        plot.title = element_text(hjust = 0.5, vjust = 1, size = 14, face = "bold")) 
+        plot.title = element_text(hjust = 0.5, vjust = 1, size = 14, face = "bold"))
 ```
 
 ### Description Two
@@ -950,12 +972,12 @@ p5 <- ggplot(data = subset(loandata, loandata$ProsperRating != ""),
        caption = "*NA Excluded",
        color = "Prosper Rating") +
   theme_pubr(legend = 'right') +
-  scale_color_brewer(type = 'qual', palette = 'Set1') +  
+  scale_color_brewer(type = 'qual', palette = 'Set1') +
   theme(legend.background = element_rect(color = 'black'),
         plot.title = element_text(hjust = 0.5, vjust = 1, size = 14, face = "bold"),
         legend.key = element_rect(fill = "lightgrey", colour = "black"),
         axis.text.x = element_text(angle = 45, hjust = 1),
-        plot.caption = element_text(color = "red", face = "italic")) 
+        plot.caption = element_text(color = "red", face = "italic"))
 
 # Add means and stds to the plot
 ggadd(p5, c("mean_sd"), color = "black")
@@ -970,8 +992,8 @@ This graph shows eveidence that a 3-year term loan will have higher borrower rat
 
 Regarding my initial observations on the Prosper loan dataset containing up to 81 variables, I was considering changing datasets because I believed the high variable count would make it hard to explore and analyze. However, after examining the dataset's variable dictionary that explained the variables in the data set, I was able to determine which variables might be interesting to explore. Furthermore, I researched and explored each variable primarily focusing on features related to the borrower rates and statuses. Next, before diving into my exploratory data analysis, I took a subset of the loan data, creating a smaller dataset in which reduced the variable count to 15.
 
-In my updated dataset, there were only 7 numerical variables. Initially, my primary focus was to start analyzing the borrower rate and the various borrower statuses. However, I decided to go through each variable one by one, trying to understand any relationships between the variables in the dataset since I'm currently working in the financial industry. As a result, most of the data visualizations I created included at least one categorical variable. 
+In my updated dataset, there were only 7 numerical variables. Initially, my primary focus was to start analyzing the borrower rate and the various borrower statuses. However, I decided to go through each variable one by one, trying to understand any relationships between the variables in the dataset since I'm currently working in the financial industry. As a result, most of the data visualizations I created included at least one categorical variable.
 
-I did spend a lot of time researching how to create visualization with one, two, or more categorical variables. One of my main struggles, which is not uncommon, was the material that I've learned up to this point were outdated, so I ended up doing additional research on the latest and up-to-date libraries and functions needed to complete this project. Based on my research and what I've learned, my solution was to utilize boxplots, bar charts, jitter plots, heat maps, and a variety of libraries/functions to create the visualizations needed for this project. 
+I did spend a lot of time researching how to create visualization with one, two, or more categorical variables. One of my main struggles, which is not uncommon, was the material that I've learned up to this point were outdated, so I ended up doing additional research on the latest and up-to-date libraries and functions needed to complete this project. Based on my research and what I've learned, my solution was to utilize boxplots, bar charts, jitter plots, heat maps, and a variety of libraries/functions to create the visualizations needed for this project.
 
-In conclusion of my project, my analysis shows that Prosper rating and term are two major indicators of the borrower rate. In addition, borrower statuses also have impacts on borrower rate, but their effects are either small or are also factors of Prosper rating. Overall, I think this project would be a good reference for anyone who wants to borrower money from a P2P lending platform. For future work and to expand the project, I can try to combine various variables and make a predictive model using logistic regression for a go/no-go investment decision or any classification algorithm would make sense. Overall, I enjoyed this project. I will say that my exploratory data analysis did give me better insight into the lending business.
+In conclusion of my project, my analysis shows that Prosper rating and term are two major indicators of the borrower rate. In addition, borrower statuses also have impacts on borrower rate, but their effects are either small or are also factors of Prosper rating. Overall, I think this project would be a good reference for anyone who wants to borrower money from a P2P lending platform. For future work and to expand the project, I would extend testing on this program by allowing organizations to extrapolate the results to a broader population to gain better insights into their data. Another  course of action is to try to relate various variables and make a predictive model using logistic regression for binary yes or no investment decision or any classification algorithm that would align with their vision and mission statement. Overall, I enjoyed this project. I will say that my exploratory data analysis did give me better insight into the lending business.
